# canvas_flutter

./: 20230625093917  README.md  file.txt  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/vaca/canvas_flutter/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
assets/: 20230625170510
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_utils.dart  bp2_file.dart  checkme_pro_file.dart  checkmepro_constant.dart  duoek_constant.dart  duoek_file.dart  main.dart
lib/ecg/: bp2_constant.dart  bp2_file.dart  checkme_constant.dart  checkme_file.dart  duoek_constant.dart  duoek_file.dart  screen_parameter.dart
lib/ffi/: plugin_filtering.dart  plugin_filtering_bindings_generated.dart
lib/pages/: base_fragment.dart  bp2_view.dart  checkme_view.dart  duoe_view.dart  welcome_page.dart
plugin_filtering/: .metadata  README.md  ffigen.yaml  pubspec.yaml
plugin_filtering/android/: build.gradle  settings.gradle
plugin_filtering/android/src/main/: AndroidManifest.xml
plugin_filtering/ios/: plugin_filtering.podspec
plugin_filtering/ios/Classes/: plugin_filtering.c
plugin_filtering/lib/: plugin_filtering.dart  plugin_filtering_bindings_generated.dart
plugin_filtering/src/: CMakeLists.txt  commalgorithm.cpp  commalgorithm.h  plugin_filtering.cpp  plugin_filtering.h  streamswtqua.cpp  streamswtqua.h  swt.cpp  swt.h
test/: widget_test.dart
